fix cloud z-index

--- a/src/styles/Outlet.module.scss
+++ b/src/styles/Outlet.module.scss
@@ -11,11 +11,13 @@
 //     top: 350px;
 // }
 .cloud1 {
+  z-index: -1;
   position: fixed;
   top: 0px;
   animation: flow1 30s linear infinite;
 }
 .cloud2 {
+  z-index: -1;
   position: fixed;
   right: 0;
   top: 450px;
