--- a/src/styles/home-scss/Background.module.scss
+++ b/src/styles/home-scss/Background.module.scss
@@ -13,14 +13,14 @@
   // height: 330px;
 }
 
-.divWrap {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  background: url(../../../public/img/5.png) no-repeat,url(../../../public/img/4.png) no-repeat;
-  background-position: center bottom -80px;
-  // visibility: hidden;
-}
+// .divWrap {
+//   width: 100%;
+//   height: 100vh;
+//   position: fixed;
+//   background: url(../../../public/img/5.png) no-repeat,url(../../../public/img/4.png) no-repeat;
+//   background-position: center bottom -80px;
+//   // visibility: hidden;
+// }
 
 .div1 {
   background: url(../../../public/img/1.png) no-repeat;
