--- a/src/styles/product-scss/product.module.scss
+++ b/src/styles/product-scss/product.module.scss
@@ -77,10 +77,14 @@ p{
     align-items: center;
     height: 45px;
     margin-bottom: 50px;
+    transition: .5s inherit;
     h2{
         font-size: 1.2rem;
         color: #000;
         font-weight: 700;
+        &:hover{
+            font-size: 1.4rem;
+        }
     }
     .product_nav_box1{
                 @include nav_box;
